[gd_scene load_steps=9 format=3 uid="uid://d2y3mraj7adca"]

[ext_resource type="Texture2D" uid="uid://cjgxtsp5l4yl2" path="res://Sprites/Menus/mirror_button_faded.png" id="1_62gf1"]
[ext_resource type="Script" path="res://Game-Objects/UI/placement_menu.gd" id="1_ifvq6"]
[ext_resource type="Texture2D" uid="uid://cytse8eqhpp4l" path="res://Sprites/Menus/mirror_button.png" id="2_j3wu0"]
[ext_resource type="Texture2D" uid="uid://b7l8a0vadgrgo" path="res://Sprites/Menus/mirror_button_hover.png" id="3_q8n87"]
[ext_resource type="Texture2D" uid="uid://bmwo70dbxm8ki" path="res://Sprites/Menus/splitter_button_faded.png" id="4_x6lyw"]
[ext_resource type="Texture2D" uid="uid://b315fciaddd2j" path="res://Sprites/Menus/splitter_button.png" id="5_dhv7j"]
[ext_resource type="Texture2D" uid="uid://cx185dx1dn2nj" path="res://Sprites/Menus/splitter_button_hover.png" id="6_sggx0"]
[ext_resource type="PackedScene" uid="uid://dtihbv7hy887e" path="res://Game-Objects/laser_generator.tscn" id="8_8etjk"]

[node name="PlacementMenu" type="Node2D" node_paths=PackedStringArray("mirror_button", "splitter_button")]
script = ExtResource("1_ifvq6")
mirror_button = NodePath("MirrorButton")
splitter_button = NodePath("SplitterButton")

[node name="BigPlacingButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_right = 783.0
offset_bottom = 494.0

[node name="MirrorButton" type="TextureButton" parent="."]
offset_left = 221.0
offset_top = 27.0
offset_right = 253.0
offset_bottom = 59.0
toggle_mode = true
texture_normal = ExtResource("1_62gf1")
texture_pressed = ExtResource("2_j3wu0")
texture_hover = ExtResource("3_q8n87")
stretch_mode = 3

[node name="SplitterButton" type="TextureButton" parent="."]
offset_left = 325.0
offset_top = 28.0
offset_right = 357.0
offset_bottom = 60.0
toggle_mode = true
texture_normal = ExtResource("4_x6lyw")
texture_pressed = ExtResource("5_dhv7j")
texture_hover = ExtResource("6_sggx0")
stretch_mode = 3

[node name="LaserGenerator" parent="." instance=ExtResource("8_8etjk")]
position = Vector2(53, 231)

[connection signal="pressed" from="BigPlacingButton" to="." method="_on_big_placing_button_pressed"]
[connection signal="pressed" from="MirrorButton" to="." method="_on_mirror_button_pressed"]
[connection signal="pressed" from="SplitterButton" to="." method="_on_splitter_button_pressed"]
